--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "vamtigerr-twitter-icon-json-ld",
-    "version": "0.0.2-0",
+    "name": "vamtiger-twitter-icon-json-ld",
+    "version": "0.0.2",
     "description": "Twitter Icon JSON-LD",
     "main": "build/vamtigerr-twitter-icon-json-ld",
     "scripts": {
@@ -63,5 +63,6 @@
         "vamtiger-node-typescript-commit": "^0.9.1",
         "vamtiger-remove": "0.0.5",
         "vamtiger-watch": "^1.3.1"
-    }
+    },
+    "dependencies": {}
 }
