--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vamtiger-twitter-icon-json-ld",
-    "version": "0.0.7",
+    "version": "0.0.8-0",
     "description": "Twitter Icon JSON-LD",
     "main": "build/vamtiger-twitter-icon-json-ld",
     "scripts": {
@@ -15,7 +15,7 @@
         "bundle-node-test": "vamtiger-bundle-typescript --relativePath --entryFilePath source/test/node.ts --bundleFilePath build/test/node.js --format cjs --sourcemap true --copySourceMap --minify",
         "bundle-browser-test": "vamtiger-bundle-typescript --relativePath --entryFilePath source/test/browser.ts --bundleFilePath build/test/browser.js --format iife --sourcemap true --copySourceMap --minify",
         "bundle": "npm test && npm run bundle-source && npm run clean-bundle",
-        "bundle-html": "vamtiger-bundle-html --relativePath --entryFolder source/html --bundleFilePath --bundleFilePath source/html/index.ts",
+        "bundle-html": "vamtiger-bundle-html --relativePath --entryFolder source/html --bundleFilePath --bundleFilePath source/html/index.ts --ignore source/test/.*html$",
         "bundle-css": "npm run bundle-shadow-css && npm run bundle-document-css",
         "bundle-shadow-css": "vamtiger-bundle-css-next --relativePath --entryFilePath source/css/index.css --bundleFilePath source/css/index.ts --sourcemap inline",
         "bundle-document-css": "vamtiger-bundle-css-next --relativePath --entryFilePath source/css/document-index.css --bundleFilePath source/css/document-index.ts --sourcemap inline",
@@ -56,7 +56,7 @@
         "vamtiger-bash": "0.0.25",
         "vamtiger-browser-method": "^0.80.1",
         "vamtiger-bundle-css-next": "^0.4.1",
-        "vamtiger-bundle-html": "^0.2.7",
+        "vamtiger-bundle-html": "^0.2.8",
         "vamtiger-bundle-typescript": "0.0.27",
         "vamtiger-copy-file": "0.0.9",
         "vamtiger-get-directory-content": "0.0.35",
